assets/monitoring-plugin/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    capability.openshift.io/name: OptionalMonitoring
    openshift.io/description: Expose the monitoring plugin service on port 9443. This port is for internal use, and no other usage is guaranteed.
    service.beta.openshift.io/serving-cert-secret-name: monitoring-plugin-cert
  labels:
    app.kubernetes.io/component: monitoring-plugin
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: monitoring-plugin
    app.kubernetes.io/part-of: openshift-monitoring
  name: monitoring-plugin
  namespace: openshift-monitoring
spec:
  ports:
  - name: https
    port: 9443
    targetPort: https
  selector:
    app.kubernetes.io/component: monitoring-plugin
    app.kubernetes.io/managed-by: cluster-monitoring-operator
    app.kubernetes.io/name: monitoring-plugin
    app.kubernetes.io/part-of: openshift-monitoring
  sessionAffinity: None
