assets/monitoring-plugin/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
  name: monitoring-plugin-access
  namespace: openshift-monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: monitoring-plugin  # Label must match your monitoring-plugin pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Allow access to port 9443
  - ports:
    - port: 9443
      protocol: TCP
  egress:
  - {}
